# Compilers

./: .gitignore  README.md
KtLexer/: build.gradle  settings.gradle
KtLexer/data/: aici.txt  file1.txt
KtLexer/src/: DFA.kt  Lexer.kt  Main.kt  MiniC.kt  Types.kt
KtLexer/src/main/: DFA.kt  Lexer.kt  Main.kt  MiniC.kt
LexicalAnalysis/: CMakeLists.txt
LexicalAnalysis/inc/: Scanner.h  Tokens.h  Tracking.h
LexicalAnalysis/lib/: Scanner.cpp  TokenSerialization.cpp  grammarC.l  grammarC.txt  tracking.cpp
LexicalAnalysis/src/: main.cpp  other.cpp
